error handling; celebration directive; handle special events; changed how to remove game and rounds; warnings in rounds; styling

--- a/src/app/dialog/error-dialog/error-dialog.component.scss
+++ b/src/app/dialog/error-dialog/error-dialog.component.scss
@@ -4,5 +4,10 @@ mat-expansion-panel {
   .error-message {
     font-family: Consolas, "Courier New", sans-serif;
     font-size: small;
+
+    .reason {
+      white-space: pre;
+      overflow-x: auto;
+    }
   }
 }
