--- a/src/app/dialog/error-dialog/error-dialog.component.html
+++ b/src/app/dialog/error-dialog/error-dialog.component.html
@@ -8,7 +8,7 @@
     </mat-expansion-panel-header>
     <div class="error-message">
       <p>Time: {{now}}</p>
-      <p>Reason: {{data.message}}</p>
+      <p class="reason">Reason: {{data.message}}</p>
     </div>
   </mat-expansion-panel>
 </mat-dialog-content>
