--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,13 @@
 @if (gameDetails$ | async; as game) {
   <h3>Spielübersicht</h3>
   <div class="game-info-container">
+    @if (!game.completed) {
+      <div class="game-info-item">
+        <hop-live-indicator></hop-live-indicator>
+        Spiel läuft
+      </div>
+    }
+
     <div class="game-info-item">
       <mat-icon>today</mat-icon>
       {{game.datetime | date:'dd.MM.yyyy'}}
@@ -24,14 +31,30 @@
       </div>
     }
 
+    @if (warnings$ | async; as warnings) {
+      <div class="game-info-item">
+        <mat-icon style="color: #ffa700;">warning</mat-icon>
+        {{warnings}} Warnung(en)
+      </div>
+    }
+
     <button mat-stroked-button (click)="openGameDetailsDialog()">
-      <mat-icon>edit</mat-icon>
+      @if ('game-details' | isLoading | async) {
+        <mat-icon><mat-spinner diameter="15"></mat-spinner></mat-icon>
+      } @else {
+        <mat-icon>edit</mat-icon>
+      }
       bearbeiten
     </button>
 
-    @if ('game-details' | isLoading | async) {
-      <mat-spinner diameter="30" strokeWidth="2"></mat-spinner>
-    }
+    <button mat-stroked-button class="danger" (click)="openRemoveGameDialog()">
+      @if ('delete-game' | isLoading | async) {
+        <mat-icon><mat-spinner diameter="15"></mat-spinner></mat-icon>
+      } @else {
+        <mat-icon>delete</mat-icon>
+      }
+      Spiel löschen
+    </button>
   </div>
 
   <mat-stepper orientation="vertical" #stepper>
@@ -90,6 +113,16 @@
             @if (round.schockAusCount > 0) {
               <mat-icon aria-hidden="false" style="margin: 10px 0;" [matBadge]="round.schockAusCount" matBadgeSize="large" [matBadgeHidden]="round.schockAusCount === 1" svgIcon="schock_aus"></mat-icon>
             }
+            @if (round.warnings?.length) {
+              <mat-icon
+                aria-hidden="false"
+                style="margin: 10px 0;
+                color: #ffa700;"
+                [matBadge]="round.warnings!.length"
+                matBadgeSize="large"
+                [matBadgeHidden]="round.warnings!.length === 1"
+              >warning</mat-icon>
+            }
           </div>
           <div class="penalty-sum-container">
             @if (round.id | isLoading | async) {
@@ -126,18 +159,18 @@
     }
   </mat-stepper>
 
-  @if (!game.completed) {
-    <button mat-flat-button (click)="startNewRound()">
-      @if ('start-new-round' | isLoading | async) {
-        <mat-icon><mat-spinner class="white-spinner" diameter="15"></mat-spinner></mat-icon>
-      } @else {
-        <mat-icon>add</mat-icon>
-      }
-      Neue Runde
-    </button>
+  <div class="game-bottom-row">
+    @if (!game.completed) {
+      <button mat-button class="new-round" (click)="startNewRound()">
+        @if ('start-new-round' | isLoading | async) {
+          <mat-icon><mat-spinner diameter="15"></mat-spinner></mat-icon>
+        } @else {
+          <mat-icon>add</mat-icon>
+        }
+        Neue Runde
+      </button>
 
-    <div>
-      <button mat-flat-button (click)="setGameCompleted($event)">
+      <button hopCelebration mat-flat-button class="complete-game" (click)="setGameCompleted()">
         @if ('complete-game' | isLoading | async) {
           <mat-icon><mat-spinner class="white-spinner" diameter="15"></mat-spinner></mat-icon>
         } @else {
@@ -145,6 +178,6 @@
         }
         Spiel abschließen
       </button>
-    </div>
-  }
+    }
+  </div>
 }
