--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -24,6 +24,7 @@
 .mat-drawer {
   --mat-sidenav-container-divider-color: #d7d7d7;
   --mat-sidenav-container-shape: 0px;
+  --mat-sidenav-container-width: 250px;
 }
 
 .mat-drawer-container {
