--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div class="app-container" [class.is-mobile]="mobileQuery.matches">
+<div class="app-container" [class.is-mobile]="(isMobile$ | async) === true">
   <mat-toolbar class="toolbar">
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
@@ -6,8 +6,8 @@
     <span>Die Hoptimisten</span>
   </mat-toolbar>
 
-  <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+  <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="(isMobile$ | async) === true ? 56 : 0">
+    <mat-sidenav #snav [mode]="(isMobile$ | async) === true ? 'over' : 'side'" [fixedInViewport]="(isMobile$ | async) === true" fixedTopGap="56">
       <mat-nav-list>
         @for (item of navigationItems; track item.label) {
           <hop-menu-item [item]="item"></hop-menu-item>
