--- a/src/app/shared/loading/loading-mask/loading-mask.component.scss
+++ b/src/app/shared/loading/loading-mask/loading-mask.component.scss
@@ -6,6 +6,7 @@
   position: absolute;
   height: 100%;
   width: calc(100% - 1px);
+  top: 0;
   left: 1px;
 
   background: color-mix(in srgb, var(--mat-app-background-color) 50%, transparent);
